syntax = "proto3";

package consultation;

option go_package = "consultation-service/internal/consultation/delivery/grpc/pb;pb";

import "google/protobuf/timestamp.proto";

import "google/protobuf/wrappers.proto";

message UserSnapshot {
  string id = 1; // unique identifier for the user
  string name = 2; // name of the user
  string email = 3; // email of the user
  string role = 4; // role of the user
}

message DoctorSnapshot {
  string id = 1; // unique identifier for the doctor
  string name = 2; // name of the doctor
  string specialization = 3; // specialization of the doctor
}

message PatientSnapshot {
  string id = 1; // unique identifier for the patient
  string name = 2; // name of the patient
  string age = 3; // age of the patient
}

message RoomSnapshot {
  string id = 1; // unique identifier for the room
  string name = 2; // name of the room
}

message Prescription {
  string name = 1; // name of the medicine
  string dose = 2; // dosage instructions
}

message ConsultationRequest {
  string id = 1;
  string queue_id = 2;
  string appointment_id = 3;
  PatientSnapshot patient = 4; // from master-service
  DoctorSnapshot doctor = 5; // from master-service
  RoomSnapshot room = 6; // from master-service
  string symptoms = 7;
  repeated Prescription prescription = 8; // list of prescriptions
  string diagnosis = 9;
  string date = 10; // date of the consultation
  string amount = 11; // amount for the consultation
}

message ConsultationResponse {
    string id = 1; // unique identifier for the consultation
    google.protobuf.StringValue queue_id = 2;
    google.protobuf.StringValue appointment_id = 3;
    UserSnapshot user = 4; // user who created the consultation
    PatientSnapshot patient = 5; // from master-service
    DoctorSnapshot doctor = 6; // from master-service
    RoomSnapshot room = 7; // from master-service
    string symptoms = 8;
    repeated Prescription prescription = 9; // list of prescriptions
    string diagnosis = 10;
    string date = 11;
    string status = 12;
    string amount = 13; // amount for the consultation
    string total_payment = 14; // total payment amount

    google.protobuf.Timestamp created_at = 15;
    google.protobuf.Timestamp updated_at = 16;
}

message ConsultationIDRequest {
  string id = 1; // unique identifier for the consultation
}

service ConsultationService {
  // Create a new consultation
  rpc CreateConsultation(ConsultationRequest) returns (ConsultationResponse);
  // Get a consultation by ID
  rpc FindByIDConsultation(ConsultationIDRequest) returns (ConsultationResponse);
  // Update an existing consultation
  rpc UpdateConsultation(ConsultationRequest) returns (ConsultationResponse);
}